# docs/swagger.yaml
@@ -52,6 +52,22 @@ definitions:
     type: object
   storage.Image:
     type: object
+  storage.UnauthorizedUser:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      passwordRepeat:
+        type: string
+    type: object
+  storage.UnauthorizedUserTruncated:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   storage.User:
     properties:
       email:
@@ -70,7 +86,7 @@ info:
   title: YULA project API
   version: "1.0"
 paths:
-  /adverts:
+  /api/adverts:
     get:
       consumes:
       - application/json
@@ -97,7 +113,7 @@ paths:
       summary: Retrieve a list of adverts
       tags:
       - adverts
-  /check_auth:
+  /api/auth/check_auth:
     get:
       consumes:
       - application/json
@@ -112,22 +128,18 @@ paths:
       summary: Check user authentication
       tags:
       - auth
-  /login:
+  /api/auth/login:
     post:
       consumes:
       - application/json
       description: Authenticate user and create a new session
       parameters:
-      - description: User email
-        in: formData
-        name: email
+      - description: User data for login
+        in: body
+        name: UnauthorizedUserTruncated
         required: true
-        type: string
-      - description: User password
-        in: formData
-        name: password
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/storage.UnauthorizedUserTruncated'
       produces:
       - application/json
       responses:
@@ -154,7 +166,7 @@ paths:
       summary: User login
       tags:
       - auth
-  /logout:
+  /api/auth/logout:
     post:
       consumes:
       - application/json
@@ -183,27 +195,18 @@ paths:
       summary: User logout
       tags:
       - auth
-  /signup:
+  /api/auth/signup:
     post:
       consumes:
       - application/json
       description: Register a new user and create a new session
       parameters:
-      - description: User email
-        in: formData
-        name: email
+      - description: User data for signup
+        in: body
+        name: UnauthorizedUser
         required: true
-        type: string
-      - description: User password
-        in: formData
-        name: password
-        required: true
-        type: string
-      - description: Password confirmation
-        in: formData
-        name: passwordRepeat
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/storage.UnauthorizedUser'
       produces:
       - application/json
       responses:
@@ -212,7 +215,7 @@ paths:
           schema:
             $ref: '#/definitions/responses.AuthOkResponse'
         "400":
-          description: Passwords do not match
+          description: Bad Request
           schema:
             $ref: '#/definitions/responses.AuthErrResponse'
       summary: User signup
