# internal/handlers/auth_handlers.go
@@ -21,8 +21,7 @@ const (
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param email formData string true "User email"
-// @Param password formData string true "User password"
+// @Param UnauthorizedUserTruncated body storage.UnauthorizedUserTruncated true "User data for login"
 // @Success 200 {object} responses.AuthOkResponse
 // @Failure 400 {object} responses.AuthErrResponse "Bad request"
 // @Failure 401 {object} responses.AuthErrResponse "Unauthorized"
@@ -141,9 +140,7 @@ func (authHandler *AuthHandler) Logout(writer http.ResponseWriter, request *http
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param email formData string true "User email"
-// @Param password formData string true "User password"
-// @Param passwordRepeat formData string true "Password confirmation"
+// @Param UnauthorizedUser body storage.UnauthorizedUser true "User data for signup"
 // @Success 201 {object} responses.AuthOkResponse
 // @Failure 400 {object} responses.AuthErrResponse
 // @Router /api/auth/signup [post]
